Adicionado header, form com fieldset, feita estilização para todos

--- a/index.html
+++ b/index.html
@@ -1,12 +1,63 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Avaliação Mentoria</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Staatliches&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    
+    <header>
+        <div class="wrapper-header">
+            <h1>avalie a sua mentoria</h1>
+            <p>Chegou a hora de avaliar o seu mentor. Bora lá?</p>
+            <img src="./images/avaliation-ballon.svg" alt="Imagem de balão de avaliação com estrelas">
+        </div>
+        <div class="form-header">
+            <h1>Informações pessoais</h1>
+        </div>
+    </header>
+
+    <form>
+        <fieldset>
+            <div class="wrapper-fieldset">
+                <div class="col-2">
+                    <div class="wrapper-field">
+                        <label for="input-name">Nome</label>
+                        <input type="text" id="input-name">
+                    </div>
+                    <div class="wrapper-field">
+                        <label for="input-lastname">Sobrenome</label>
+                        <input type="text" id="input-lastname">
+                    </div>
+                </div>
+                <div class="wrapper-field">
+                    <label for="input-email">Email <span>(digite um email válido)</span></label>
+                    <input type="email" id="input-email" required>
+                </div>
+            </div>
+        </fieldset>
+
+        <fieldset>
+            <div class="wrapper-fieldset">
+                <legend>Informações do mentor</legend>
+                <div class="wrapper-field">
+                    <label for="input-name">Nome</label>
+                    <input type="text" id="input-name">
+                </div>
+            </div>
+
+
+        </fieldset>
+    </form>
+
+
+
 </body>
+
 </html>
