Adicionando input checkbox

--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
                     <label for="input-feedback">Email <span>(digite um feedback válido)</span></label>
                     <textarea id="input-feedback"></textarea>
                 </div>
+                <div class="wrapper-checkbox">
+                    <input type="checkbox" id="checkbox-feedback">
+                    <label for="checkbox-feedback">Todas as minhas dúvidas foram esclarecidas durante a mentoria.</label>
+                </div>
             </div>
         </fieldset>
 
