--- a/index.html
+++ b/index.html
@@ -44,16 +44,25 @@
         </fieldset>
 
         <fieldset id="mentor-info">
-            <div  class="wrapper-fieldset">
+            <div class="wrapper-fieldset">
                 <legend>Informações do mentor</legend>
-
-                <div class="wrapper-field">
-                    <label for="input-mentor">Selecione quem foi o seu mentor</label>
-                    <select id="input-mentor">
-                        <option value="">Marcio</option>
-                        <option value="">José</option>
-                        <option value="">Henrique</option>
-                    </select>
+                <div class="col-2">
+                    <div class="wrapper-field">
+                        <label for="input-mentor">Selecione quem foi o seu mentor</label>
+                        <select id="input-mentor">
+                            <option value="">Marcio</option>
+                            <option value="">José</option>
+                            <option value="">Henrique</option>
+                        </select>
+                    </div>
+                    <div class="wrapper-field">
+                        <label for="input-mentor">Selecione quem foi o seu mentor</label>
+                        <select id="input-mentor">
+                            <option value="">Marcio</option>
+                            <option value="">José</option>
+                            <option value="">Henrique</option>
+                        </select>
+                    </div>
                 </div>
                 <div class="wrapper-field">
                     <label for="input-feedback">Email <span>(digite um feedback válido)</span></label>
@@ -61,7 +70,30 @@
                 </div>
                 <div class="wrapper-checkbox">
                     <input type="checkbox" id="checkbox-feedback">
-                    <label for="checkbox-feedback">Todas as minhas dúvidas foram esclarecidas durante a mentoria.</label>
+                    <label for="checkbox-feedback">Todas as minhas dúvidas foram esclarecidas durante a
+                        mentoria.</label>
+                </div>
+            </div>
+        </fieldset>
+
+        <fieldset id="next-mentor">
+            <div class="wrapper-fieldset">
+                <legend>Agendando próxima mentoria</legend>
+                <div class="col-2">
+                    <div class="wrapper-field">
+                        <label for="input-date">Data <span>(DD/MM/AAAA)</span></label>
+                        <input type="date" id="input-date">
+                    </div>
+                    <div class="col-2">
+                        <div class="wrapper-field">
+                            <label for="input-begin">Das</label>
+                            <input type="time" id="input-begin">
+                        </div>
+                        <div class="wrapper-field">
+                            <label for="input-end">Até</label>
+                            <input type="time" id="input-end">
+                        </div>
+                    </div>
                 </div>
             </div>
         </fieldset>
