--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <div class="col-2">
                     <div class="wrapper-field">
                         <label for="input-name">Nome</label>
-                        <input type="text" id="input-name">
+                        <input type="text" id="input-name" required>
                     </div>
                     <div class="wrapper-field">
                         <label for="input-lastname">Sobrenome</label>
@@ -98,6 +98,7 @@
             </div>
         </fieldset>
 
+       <input type="submit" value="Salvar" class="button">
     </form>
 
 
