--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     </div>
                     <div class="wrapper-field">
                         <label for="input-lastname">Sobrenome</label>
-                        <input type="text" id="input-lastname">
+                        <input type="text" id="input-lastname" required>
                     </div>
                 </div>
                 <div class="wrapper-field">
@@ -65,7 +65,7 @@
                     </div>
                 </div>
                 <div class="wrapper-field">
-                    <label for="input-feedback">Email <span>(digite um feedback válido)</span></label>
+                    <label for="input-feedback">Feedback sobre o mentor</label>
                     <textarea id="input-feedback"></textarea>
                 </div>
                 <div class="wrapper-checkbox">
